Changing submission process into a queue process. Sending emails to track and inform about the status. Still to test "updating study" and restoring the original study in case there is an error (kind of roll-back) Update public release date not implemented yet this way.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1046 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -127,6 +127,7 @@ msg.upload=A brand new study
 msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="submitHelp">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="submitHelp">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
 msg.upload.desc2=Go to <a href="submitHelp">How to submit to MetaboLights</a> guide.
 msg.upload.notValid=Please provide a valid file name..
+msg.upload.queueditems=You have currently some studies in the queue waiting to be processed. <b>Please, wait for your previous studies to be processed before submitting a new one.</b>
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
 msg.uploaded.ok2=Please, bare in mind that we have replaced your identifiers with our unique MetaboLights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
@@ -189,7 +190,7 @@ msg.validation.backupFileExists=There is already a backup file for the study {0}
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
 msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
-msg.studyQueueSuccesfully=Congratulations\! You have successfully uploaded your study file. Now it is in a queue waiting to be processed.\n\nYou will receive and email when the submission proccess it's finished with a detailed report of the proccess.\n\nThank you!
+msg.studyQueueSuccesfully=Congratulations\! You have successfully uploaded your study file. Your study is placed in a queue, waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
@@ -218,10 +219,20 @@ Entry.fileMissing=File does not exist, please contact the MetaboLights Team
 Entry.notAuthorised=You are not authorised to access this file, please log in as the submitter
 BIISubmit.fileEmpty=File must not be empty
 BIISubmit.dateEmpty=You must choose a date for the study to become public, this can be up to 5 years in the future
+BIISubmit.fileExtension=You must choose a zip file.
 BIISubmit.newAccNumbers=These are the new accession numbers:
 BIISubmit.fileUploadComplete=File upload complete for
 
-
+# Mail messages
+mail.noreplyaddress=no-reply@ebi.ac.uk
+mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
+mail.queuedStudy.body=Hi {0}\n\nYou have uploded {1}. Please be patient whilst your submission is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nFile size\: {2} \nTo be public on\: {3}\nHost\: {4}\n{5}.
+mail.submittedStudy.subject=Congratulations\! Your study {0} is been succesfully processed\!
+mail.submittedStudy.body=We are happy to communicate you that your study ({0}) has been succesfully processed. Your study is now identified as {1}. The public release date was set to {2}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{1}.
+mail.errorInStudy.subject=We can not process {0}
+mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTECHNICAL DETAILS\:\nFile\:{0}\nError\:{1}.
+mail.updateStudy.subject=Study {0} updated.
+mail.updateStudy.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 
 url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
