User admin page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1047 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -25,6 +25,8 @@ label.lastName=Last name
 label.affili=Affliation/Institution
 label.affiliUrl=Web address for affiliation/institution (URL)
 label.country=Country
+label.userStatus=Status
+label.userJoinDate=Join date
 label.create=Create
 label.cancel=Cancel
 label.update=Update
