Enable user management for curators
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1051 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -75,6 +75,7 @@ label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
+label.userStatus=Status
 
 
 menu.home=home
@@ -93,6 +94,8 @@ menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
+menu.config=configuration
+menu.users=users
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
