Lucene search fix, general update
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1054 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -163,7 +163,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \nThe MetaboLights Team
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
-msg.nothingFound=No results were found for your query.
+msg.nothingFound=No results were found for your query. Try to search for a metabolite or organism
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
