Metabolite facet, first stab with full list!
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1056 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -44,6 +44,7 @@ label.metaboLightsEntry=MetaboLights Entry
 label.title=Title
 label.organism=Organism
 label.technology=Technology
+label.metabolite=Metabolite
 label.platforms=Platform
 label.status=Privacy
 label.description=Description
