Update public release date through the queue. Not finished, so still update public release date is done in the "old" way.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1057 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -239,7 +239,10 @@ mail.errorInStudy.subject=We can not process {0}
 mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTECHNICAL DETAILS\:\nFile\:{0}\nError\:{1}.
 mail.updateStudy.subject=Study {0} updated.
 mail.updateStudy.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
-
+mail.publicReleaseDate.subject=Public release date of {0} updated.
+mail.publicReleaseDate.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
+mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nTo be public on\: {2}\nHost\: {3}\nUPDATING PUBLIC RELEASE DATE.
 url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
 url.EBIheaderTop=/inc/head.html
