git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1061 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -70,7 +70,7 @@ label.data=Data
 label.publications=Publications
 label.organisms=Organism(s)
 label.experimentalFactors=Experimental Factors
-label.data.table.groupName=Source Name
+label.data.table.groupName=Source
 label.data.table.name=Technology - Platform
 label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
