--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -196,7 +196,7 @@ msg.validation.backupFileExists=There is already a backup file for the study {0}
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
 msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
-msg.studyQueueSuccesfully=Congratulations\! You have successfully uploaded your study file. Your study is placed in a queue, waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!
+msg.studyQueueSuccesfully=You have now successfully uploaded your study file. Your study is placed in a queue, waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!. This does not means that your study has passed our validation step. We will notify you in case it fails.
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
