Partial implementation of deleting an study using the queue. Some minor fixes.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1069 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -76,7 +76,6 @@ label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
-label.userStatus=Status
 
 
 menu.home=home
@@ -197,6 +196,7 @@ msg.validation.invalid=The file has not passed the MetaboLights validation. Plea
 msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
 msg.studyQueueSuccesfully=You have now successfully uploaded your study file. Your study is now in the submission' queue waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!. This does not means that your study has passed our validation step. We will notify you in case it fails.
+msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
