Delete study functionality Generic message page (for any Controller)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1071 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -22,7 +22,7 @@ label.userName=Email Address
 label.needNewAccount=Create a new account
 label.firstName=First name(s)
 label.lastName=Last name
-label.affili=Affliation/Institution
+label.affili=Affiliation/Institution
 label.affiliUrl=Web address for affiliation/institution (URL)
 label.country=Country
 label.userStatus=Status
@@ -53,12 +53,13 @@ label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
 label.contact=Contact us
 label.message=Message to the MetaboLights team
-label.aboutMetab=About Metabolights
+label.aboutMetab=About MetaboLights
 label.ftpDownload=Download experiment
 label.searchFilter=Filter by
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
+label.deleteStudy=Delete study ⚠
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been submitted before
@@ -197,6 +198,13 @@ msg.studytogopublic=Great news\! Your study {0} is about be publicly available o
 msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
 msg.studyQueueSuccesfully=You have now successfully uploaded your study file. Your study is now in the submission' queue waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!. This does not means that your study has passed our validation step. We will notify you in case it fails.
 msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
+msg.deleteStudy.userValidation=You are logged in as {0} and the owner of {1} is {2}. Only {2} can delete {1}.\n
+msg.deleteStudy.statusValidation={0} is PUBLIC therefore can't be deleted.\n
+msg.deleteStudy.titleValidation=Deletion can't continue.
+msg.deleteStudyQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the study is finally deleted.\n\nThank you\!.
+msg.deleteStudyDialog.title=Confirmation required
+msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be lost and the accesion number will not be available anymore.
+
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
@@ -242,7 +250,11 @@ mail.updateStudy.body=We are happy to communicate you that your study ({0}) has 
 mail.publicReleaseDate.subject=Public release date of {0} updated.
 mail.publicReleaseDate.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
-mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nTo be public on\: {2}\nHost\: {3}\nUPDATING PUBLIC RELEASE DATE.
+mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nStudy\:{1}\nTo be public on\: {2}\nHost\: {3}\nUPDATING PUBLIC RELEASE DATE.
+mail.queuedDeletion.subject=The study {0} is now waiting to be deleted.
+mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete {1}. Please be patient whilst your request is processed. Be aware that you will lost your accession number definitely.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nnHost\: {2}\nStudy\:{1}\nDELETE.
+mail.studyDeleted.subject=Study {0} deleted.
+mail.studyDeleted.body=We are happy to communicate you that your study ({0}) has been succesfully deleted and is no longer in our system.
 url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
 url.EBIheaderTop=/inc/head.html
