On behalf of ken.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1079 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -59,7 +59,7 @@ label.searchFilter=Filter by
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
-label.deleteStudy=Delete study ⚠
+label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been submitted before
@@ -77,11 +77,13 @@ label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
+label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
 
 
 menu.home=home
 menu.browse=browse
 menu.submit=submit
+menu.help=help
 menu.about=about
 menu.login=log in
 menu.myStudies=my studies
@@ -113,6 +115,7 @@ msg.metabolightsAbout9=The latest version of the metabolite identification plugi
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
 msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
+
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
@@ -164,7 +167,8 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \nThe MetaboLights Team
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
-msg.nothingFound=No results were found for your query. Try to search for a metabolite or organism
+msg.nothingFound=No results were found for your query.
+msg.searchSuggestions=You can search for a metabolite or organism, e.g. <a href="search?freeTextQuery=alanin">alanin</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
@@ -203,9 +207,9 @@ msg.deleteStudy.statusValidation={0} is PUBLIC therefore can't be deleted.\n
 msg.deleteStudy.titleValidation=Deletion can't continue.
 msg.deleteStudyQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the study is finally deleted.\n\nThank you\!.
 msg.deleteStudyDialog.title=Confirmation required
-msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be lost and the accesion number will not be available anymore.
+msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
 
-# For form field verification email 
+# For form field verification email
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
 Email.emailAddress.emailAddress=This does not look like a valid email address.
@@ -240,21 +244,21 @@ BIISubmit.fileUploadComplete=File upload complete for
 # Mail messages
 mail.noreplyaddress=no-reply@ebi.ac.uk
 mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
-mail.queuedStudy.body=Hi {0}\n\nYou have uploded {1}. Please be patient whilst your submission is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nFile size\: {2} \nTo be public on\: {3}\nHost\: {4}\n{5}.
-mail.submittedStudy.subject=Congratulations\! Your study {0} is been succesfully processed\!
-mail.submittedStudy.body=We are happy to communicate you that your study ({0}) has been succesfully processed. Your study is now identified as {1}. The public release date was set to {2}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{1}.
+mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nYour computer name\: {4}\nSubmitted: {5}.
+mail.submittedStudy.subject=Congratulations\! Your study {0} is been successfully processed\!
+mail.submittedStudy.body=We are happy to communicate that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{1}.
 mail.errorInStudy.subject=We can not process {0}
-mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTECHNICAL DETAILS\:\nFile\:{0}\nError\:{1}.
+mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{1}.
 mail.updateStudy.subject=Study {0} updated.
-mail.updateStudy.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.updateStudy.body=We are happy to communicate you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
-mail.publicReleaseDate.body=We are happy to communicate you that your study ({0}) has been succesfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.publicReleaseDate.body=We are happy to communicate you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
-mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nStudy\:{1}\nTo be public on\: {2}\nHost\: {3}\nUPDATING PUBLIC RELEASE DATE.
+mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nStudy\:{1}\nTo be public on\: {2}\nYour computer name\: {3}\nUPDATING PUBLIC RELEASE DATE.
 mail.queuedDeletion.subject=The study {0} is now waiting to be deleted.
-mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete {1}. Please be patient whilst your request is processed. Be aware that you will lost your accession number definitely.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nDETAILED INFO\:\nnHost\: {2}\nStudy\:{1}\nDELETE.
+mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete study {1}. \nBe aware that this accession number will no longer be available, so please do not try to use this reference any longer.\n\nPlease be patient whilst your request is processed.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nYour computer name\: {2}\nStudy\:{1}\nDELETE.
 mail.studyDeleted.subject=Study {0} deleted.
-mail.studyDeleted.body=We are happy to communicate you that your study ({0}) has been succesfully deleted and is no longer in our system.
+mail.studyDeleted.body=We are happy to communicate you that your study ({0}) has been successfully deleted and is no longer in our system.
 url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
 url.EBIheaderTop=/inc/head.html
