Separate browse page, url = browse
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1082 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -165,10 +165,10 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \n\nYou can now use this account to submit data to the MetaboLights repository.\
 \n\n\nKind regards,\
 \nThe MetaboLights Team
-msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
+msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed...
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
-msg.searchSuggestions=You can search for a metabolite or organism, e.g. <a href="search?freeTextQuery=alanin">alanin</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>
+msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanin">alanin</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
