More information in the "download" page, also only listing the first name in the top menu when the user is logged in.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1083 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -115,7 +115,7 @@ msg.metabolightsAbout9=The latest version of the metabolite identification plugi
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
 msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
-
+msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  You can then simply locally upload the experiments (Studies) you are interested in, see above.
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
