--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -78,7 +78,7 @@ label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
 label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
-
+label.stats=Statistics
 
 menu.home=home
 menu.browse=browse
@@ -208,6 +208,7 @@ msg.deleteStudy.titleValidation=Deletion can't continue.
 msg.deleteStudyQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the study is finally deleted.\n\nThank you\!.
 msg.deleteStudyDialog.title=Confirmation required
 msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
+msg.statistics=MetaboLights study repository statistics
 
 # For form field verification email
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
