--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -116,6 +116,7 @@ msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://
 msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
 msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  You can then simply locally upload the experiments (Studies) you are interested in, see above.
+msg.metabolightsAbout14=Help topics
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
@@ -264,3 +265,13 @@ url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
 url.EBIheaderTop=/inc/head.html
 url.EBIheaderFoot=/inc/foot.html
+
+help.url.setup=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.47opvsht6337>General&nbsp;Setup</a>
+help.url.isasetup=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.bavk5qlhju2y>Download&nbsp;and&nbsp;setup&nbsp;ISAcreator</a>
+help.url.describe=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.99iahx65tuns>Describe&nbsp;your&nbsp;Experiment</a>
+help.url.study=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.y44r29qtd8c2>Create&nbsp;a&nbsp;Study</a>
+help.url.sample=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.qkw812eqaxcs>Sample&nbsp;Information</a>
+help.url.assay=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.nm6jwnlj1qx4>Assay&nbsp;Information</a>
+help.url.archive=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.7ijudzjok4cv>Archive&nbsp;your&nbsp;experiment</a>
+help.url.account=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.dkh028xtezex>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
+help.url.submit=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.9jliam4ei6tf>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
