Merger of old and new version of SourceForge repository
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1093 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -99,6 +99,7 @@ menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
 menu.config=configuration
 menu.users=users
+menu.Ebeye=Ebeye-Help
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
@@ -117,6 +118,7 @@ msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a l
 msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
 msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  You can then simply locally upload the experiments (Studies) you are interested in, see above.
 msg.metabolightsAbout14=Help topics
+msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from http://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="http://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
@@ -210,6 +212,27 @@ msg.deleteStudyQueued=Your request has been successfully received and is now wai
 msg.deleteStudyDialog.title=Confirmation required
 msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
 msg.statistics=MetaboLights study repository statistics
+
+# Ebeye-client messages
+ebeye.msg.domain=List of domains. Total 
+ebeye.msg.fields=List of Fields. Total 
+ebeye.msg.entries=List of entries. Total 
+ebeye.msg.query=Query for entries and domains below:
+ebeye.msg.showing=showing 
+
+# Reference Layer Messages
+ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
+ref.msg.iupac=IUPAC Name\:
+ref.msg.chebi.name=CHEBI\:
+ref.msg.chebi.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/advancedSearchFT\.do\?searchString\=
+ref.msg.mtbl.studies=In MetaboLights studies
+ref.msg.mtbls.url=http\:\/\/www\.ebi\.ac\.uk\/metabolights\/search\?freeTextQuery\=
+ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?defaultImage\=true\&imageIndex\=0\&chebiId\=
+ref.msg.technology=Technology
+ref.msg.organism=Organism
+
+#Frontier Messages
+frontier.strapline.message=A database for Metabolomics experiments and derived information
 
 # For form field verification email
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
