Bulk commit from old repository
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1096 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -231,6 +231,18 @@ ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?def
 ref.msg.technology=Technology
 ref.msg.organism=Organism
 
+ref.compound.synonyms=Synonyms
+ref.compound.tab.characteristics=Characteristics
+ref.compound.tab.characteristics.definition=Definition
+ref.compound.tab.characteristics.chemicalproperties=Chemical properties
+ref.compound.tab.characteristics.formulae=Chemical formulae
+ref.compound.tab.foundin=Found in
+ref.compound.tab.pathways=Metabolic pathways
+ref.compound.tab.reactions=Reactions
+ref.compound.tab.nmrspectra=NMR spectra
+ref.compound.tab.msspectra=MS spectra
+ref.compound.tab.literature=Literature
+
 #Frontier Messages
 frontier.strapline.message=A database for Metabolomics experiments and derived information
 
