--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -225,11 +225,14 @@ ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
 ref.msg.iupac=IUPAC Name\:
 ref.msg.chebi.name=CHEBI\:
 ref.msg.chebi.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/advancedSearchFT\.do\?searchString\=
-ref.msg.mtbl.studies=In MetaboLights studies
+ref.msg.mtbl.studies=Studies
 ref.msg.mtbls.url=http\:\/\/www\.ebi\.ac\.uk\/metabolights\/search\?freeTextQuery\=
 ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?defaultImage\=true\&imageIndex\=0\&chebiId\=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
+ref.msg.searchResult=results found for 
+ref.msg.emptyBrowse=results found
+ref.msg.filterResults=Filter your results
 
 ref.compound.synonyms=Synonyms
 ref.compound.tab.characteristics=Characteristics
