--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -212,6 +212,9 @@ msg.deleteStudyQueued=Your request has been successfully received and is now wai
 msg.deleteStudyDialog.title=Confirmation required
 msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
 msg.statistics=MetaboLights study repository statistics
+msg.useroptions=these are your account options.
+msg.useroptionscurator=As a curator, you may also want to ...
+
 
 # Ebeye-client messages
 ebeye.msg.domain=List of domains. Total 
