Terms and conditions acceptance in create account form.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1141 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -214,7 +214,8 @@ msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All file
 msg.statistics=MetaboLights study repository statistics
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
-
+msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
+msg.T&Cinvalid=You must accept EBI terms and conditions.
 
 # Ebeye-client messages
 ebeye.msg.domain=List of domains. Total 
