--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -235,7 +235,7 @@ ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?def
 ref.msg.technology=Technology
 ref.msg.organism=Organism
 ref.msg.searchResult=results found for 
-ref.msg.noResult=No results were found for your query. You can search for a wide range metabolites. Examples: 
+ref.msg.noResult=No results were found for your query. You can search for a wide range of metabolites. Examples: 
 ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
 
