Reference layer tabs underlined removed, changed 'Found in' to 'Source', MTBLS link now dynamic to localhost/dev/prod
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1149 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -244,7 +244,7 @@ ref.compound.tab.characteristics=Characteristics
 ref.compound.tab.characteristics.definition=Definition
 ref.compound.tab.characteristics.chemicalproperties=Chemical properties
 ref.compound.tab.characteristics.formulae=Chemical formulae
-ref.compound.tab.foundin=Found in
+ref.compound.tab.foundin=Source
 ref.compound.tab.pathways=Metabolic pathways
 ref.compound.tab.reactions=Reactions
 ref.compound.tab.nmrspectra=NMR spectra
