New homepage with a gallery. Option for updating the gallery items in config pages Entry page alignment fixed Now back to getting the full header from template WS
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1154 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -79,6 +79,10 @@ label.metabolites.description=Description
 label.metabolites.formula=Formula
 label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
 label.stats=Statistics
+title.serviceName=MetaboLights
+title.download=Download
+title.submit=Submit
+
 
 menu.home=home
 menu.browse=browse
