--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -322,3 +322,5 @@ help.url.assay=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJN
 help.url.archive=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.7ijudzjok4cv>Archive&nbsp;your&nbsp;experiment</a>
 help.url.account=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.dkh028xtezex>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
 help.url.submit=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.9jliam4ei6tf>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
+label.metabolites.smiles=Smiles
+label.metabolites.inchi=Inchi
